name:              dnponline
version:           0.0.1
license:           BSD3
license-file:      LICENSE
author:            Braden Shepherdson
maintainer:        Braden Shepherdson
synopsis:          A virtual tabletop for dice and paper games
description:       A virtual tabletop for dice and paper games
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://dnponline.yesodweb.com/

Flag production
    Description:   Build the production executable.
    Default:       False

executable         simple-server
    if flag(production)
        Buildable: False
    main-is:       simple-server.hs
    build-depends: base         >= 4       && < 5
                 , yesod        >= 0.6     && < 0.7
                 , yesod-auth   >= 0.2     && < 0.3
                 , mime-mail    >= 0.0     && < 0.1
                 , wai-extra
                 , directory
                 , bytestring
                 , text
                 , persistent   >= 0.3.1.1
                 , persistent-sqlite
                 , template-haskell
                 , hamlet
                 , web-routes
                 , hjsmin       >= 0.0.4   && < 0.1
				 , parsec >= 3 && < 4
    ghc-options:   -Wall
    extensions:    TemplateHaskell, QuasiQuotes, TypeFamilies

executable         devel-server
    if flag(production)
        Buildable: False
    else
        build-depends: wai-handler-devel >= 0.1.0 && < 0.2
    main-is:       devel-server.hs
    ghc-options:   -Wall -O2

executable         fastcgi
    if flag(production)
        Buildable: True
        build-depends: wai-handler-fastcgi >= 0.2.2 && < 0.3
    else
        Buildable: False
    cpp-options:   -DPRODUCTION
    main-is:       fastcgi.hs
    ghc-options:   -Wall -threaded
    extensions:    TemplateHaskell, QuasiQuotes, TypeFamilies
